fix navbar color

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block nav_home %}underline underline-offset-8 decoration-2 decoration-pink-500{% endblock %}
-{% block nav_pub %}text-gray-500{% endblock %}
+{% block nav_research %}text-gray-500{% endblock %}
 
 {% block title %}
     Vasco Xu
