--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         I'm Vasco Xu, currently a third-year PhD student at the University of Chicago advised by <a href="https://people.cs.uchicago.edu/~hankhoffmann/" target="_blank" class="text-red-600 underline underline-offset-4">Prof. Hank Hoffmann</a> and <a href="https://karan-ahuja.com/" target="_blank" class="text-purple-700 underline underline-offset-4 hover:underline">Prof. Karan Ahuja</a>.
         Prior to that, I earned a <a href="https://www.frederickhonors.pitt.edu/academics/bachelor-philosophy-bphil-degree" target="_blank" class="text-blue-700 underline underline-offset-4 hover:underline">B.Phil</a> in Computer Science at the University of Pittsburgh where I was fortunate to work with 
         <a href="https://people.cs.pitt.edu/~mosse/personal.shtml" target="_blank" class="text-blue-700 underline underline-offset-4 hover:underline">Prof. Daniel Mossé</a>, <a href="https://people.cs.pitt.edu/~skhattab/" target="_blank" class="text-blue-700 underline underline-offset-4 hover:underline">Prof. Sherif Khattab</a>, and 
-        <a href="https://sites.pitt.edu/~babay/" target="_blank" class="text-blue-700 underline underline-offset-4 hover:underline">Prof. Amy Babay</a>.
+        <a href="https://sites.pitt.edu/~babay/" target="_blank" class="text-blue-700 underline underline-offset-4 hover:underline">Prof. Amy Babay</a>. Even prior to that, I grew up in <a href="https://en.wikipedia.org/wiki/Lisbon" target="_blank" class="text-red-600">Lisbon, Portugal.</a>
       </p>
 
       <p class="text-lg text-gray-700 mb-4">
