--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -15,6 +15,33 @@
     <!-- Publication List -->
     <div class="bg-white overflow-hidden md:max-w-4xl">
 
+      <!-- MOBILEPOSER -->
+      <div class="md:flex md:items-center">
+        <div class="md:flex-shrink-0">
+          <img class="h-36 w-full object-cover" src="static/assets/pubs/teasers/MobilePoser.gif" alt="MobilePoser Teaser">
+        </div>
+        <div class="p-8">
+          <!-- Pub. Description -->
+        <h2 class="text-xl font-semibold text-gray-900 md:mt-0">MobilePoser: Real-Time Full-Body Pose Estimation and 3D Human Translation from IMUs in Mobile Consumer Devices</h2>
+        <div class="uppercase tracking-wide text-sm mt-1"><span class="text-gray-600 font-bold">UIST '24:</span> <span class="text-red-800 font-medium">ACM Symposium on User Interface Software and Technology</span></div>
+        <p class="mt-2 text-gray-600"><span class="font-semibold">Vasco Xu</span>, Chenfeng Gao, Henry Hoffmann, Karan Ahuja</p>
+          
+          <!-- Pub. Links  -->
+          <div class="flex mt-2">
+            <div class="p-1">
+              <div class="flex space-x-2 justify-center md:justify-start">
+                <span class="text-gray-600">[</span>
+                <a href="" target="_blank" class="text-gray-600 underline underline-offset-4 hover:text-black hover:underline hover:decoration-pink-500">paper</a>
+                <span class="text-gray-300">|</span>
+                <a href="" target="_blank" class="text-gray-600 underline underline-offset-4 hover:text-black hover:underline hover:decoration-pink-500">video</a>
+                <span class="text-gray-600">]</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>      
+
+      <!-- XS -->
       <div class="md:flex md:items-center">
         <div class="md:flex-shrink-0">
           <img class="h-36 w-full object-cover" src="static/assets/pubs/teasers/Xs.gif" alt="Xs Teaser">
