--- a/templates/publications.html
+++ b/templates/publications.html
@@ -1,11 +1,34 @@
 <div class="container mx-auto max-w-7xl mt-8 px-8 py-8">
   <h2 class="text-3xl font-light text-gray-900 mb-4">Publications</h2>
+
+    <!-- Publication Entry -->
+    <div class="flex flex-col md:flex-row bg-white mt-8">
+      <!-- Teaser Image -->
+      <div class="md:w-1/4 mt-1">
+        <img src="static/assets/pubs/teasers/MobilePoser.gif" class="object-contain mx-auto" alt="MobilePoser Teaser">
+      </div>
+  
+      <!-- Pub. Description -->
+      <div class="md:w-2/3 md:pl-6">
+        <h2 class="text-xl font-semibold text-gray-900 md:mt-0">MobilePoser: Real-Time Full-Body Pose Estimation and 3D Human Translation from IMUs in Mobile Consumer Devices</h2>
+        <div class="uppercase tracking-wide text-sm mt-1"><span class="text-gray-600 font-bold">UIST '24:</span> <span class="text-red-800 font-medium">ACM Symposium on User Interface Software and Technology</span></div>
+        <p class="mt-2 text-gray-600"><span class="font-semibold">Vasco Xu</span>, Chenfeng Gao, Henry Hoffmann, Karan Ahuja</p>
+        <!-- Links -->
+        <div class="mt-2">
+          <a href="" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">paper</span> ]</a>
+          <a href="" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">video</span> ]</a>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Divider Line -->
+    <hr class="my-8 border-gray-200" />
   
   <!-- Publication Entry -->
   <div class="flex flex-col md:flex-row bg-white mt-8">
     <!-- Teaser Image -->
     <div class="md:w-1/4 mt-1">
-      <img src="static/assets/pubs/teasers/Xs.gif" class="object-contain mx-auto" alt="Publication Visual">
+      <img src="static/assets/pubs/teasers/Xs.gif" class="object-contain mx-auto" alt="Xs Teaser">
     </div>
 
     <!-- Pub. Description -->
