--- a/templates/publications.html
+++ b/templates/publications.html
@@ -15,8 +15,9 @@
         <p class="mt-2 text-gray-600"><span class="font-semibold">Vasco Xu</span>, Chenfeng Gao, Henry Hoffmann, Karan Ahuja</p>
         <!-- Links -->
         <div class="mt-2">
-          <a href="" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">paper</span> ]</a>
-          <a href="" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">video</span> ]</a>
+          <a href="https://dl.acm.org/doi/10.1145/3654777.3676461" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">paper</span> ]</a>
+          <a href="https://www.youtube.com/watch?v=cN75eFHdCyE&ab_channel=SPICELab" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">video</span> ]</a>
+          <a href="https://github.com/SPICExLAB/MobilePoser" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">code</span> ]</a>
         </div>
       </div>
     </div>
