Update home page

--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -31,9 +31,11 @@
             <div class="p-1">
               <div class="flex space-x-2 justify-center md:justify-start">
                 <span class="text-gray-600">[</span>
-                <a href="" target="_blank" class="text-gray-600 underline underline-offset-4 hover:text-black hover:underline hover:decoration-pink-500">paper</a>
+                <a href="https://dl.acm.org/doi/10.1145/3654777.3676461" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">paper</span> ]</a>
                 <span class="text-gray-300">|</span>
-                <a href="" target="_blank" class="text-gray-600 underline underline-offset-4 hover:text-black hover:underline hover:decoration-pink-500">video</a>
+                <a href="https://www.youtube.com/watch?v=cN75eFHdCyE&ab_channel=SPICELab" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">video</span> ]</a>
+                <span class="text-gray-300">|</span>
+                <a href="https://github.com/SPICExLAB/MobilePoser" target="_blank" class="text-pink-600 hover:text-gray-500 mr-2">[ <span class="hover:underline hover:underline-offset-4">code</span> ]</a>
                 <span class="text-gray-600">]</span>
               </div>
             </div>
